# madi

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
schemas/v1/: MadiPolicy.json
src/madi/: __init__.py  cache.py  constants.py  errors.py  policy.py  types.py
tests/: helpers.py  strategies.py  test_cache.py  test_errors.py  test_policy.py
