[project]
name = "madi"
version = "0.1.0"
description = "Dead simple JSON policy engine."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["jmespath>=1.0.1", "jsonschema>=4.23.0", "msgspec>=0.18.6"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "pytest-describe>=2.2.0",
    "tox>=4.18.1",
    "pyright>=1.1.380",
    "hypothesis>=6.112.1",
]

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["src"]
